--- a/try3.html
+++ b/try3.html
@@ -78,10 +78,10 @@
     <main>
       <aside class="card">
         <ul><h2>Top暢銷排行</h2>
-            <li>★1.暮光之城</li> 
-            <li>☆2.GQ雜誌</li>    
-            <li>★3.午夜陽光</li>
-          </ul>
+          <li><a href="book.html" style="color: white;">★1.暮光之城</a></li> 
+          <li><a href="magazine1.html" style="color: white;">☆2.GQ雜誌</a></li>    
+          <li><a href="book5.html" style="color: white;">★3.午夜陽光</a></li>
+        </ul>
       </aside>
 				<div class="productList">
                     <ul>
